--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div class="row justify-content-center">
             <div class="col-lg-10">
                 <div class="search-card">
-                    <form action="search_results.php" method="POST">
+                    <form action="search_results_enhanced.php" method="POST">
                         <div class="row g-3">
                             <div class="col-md-6 col-lg-3">
                                 <label for="departure_airport" class="form-label fw-semibold">
